<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.moviegrid.MovieGridFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMovie"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/item_grid_film" />

    <ProgressBar
        android:id="@+id/progressBarMovieGrid"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"/>
</FrameLayout>